rabota nad catalog

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Shop</title>
 </head>
 <body>
-    <div class="top-header center">
+    <header class="top-header center">
         <div class="top-header__left">
             <a href="#"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -17,8 +17,8 @@
             <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
             <a href="#"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
-    </div>
-    <div class="promo">
+    </header>
+    <main class="promo">
         <div class="promo__left">
             <img src="img/promo.png" class="promo__img" alt="promo">
         </div>
@@ -28,78 +28,116 @@
                 <p class="promo__text">OF LUXERIOUS <span>FASHION</span></p>
             </div>
         </div>
-    </div>
-    <div class="catalog__top center">
-        <div class="catalog__item">
-            <img src="img/for_women.png" class="catalog_img" alt="for women">
-            <div class="catalog__content">
-                <h3 class="catalog__header">30% OFF</h3>
-                <p class="catalog__text">FOR WOMEN</p>
+    </main>
+    <section>
+        <div class="catalog__top center">
+            <div class="catalog__item">
+                <img src="img/for_women.png" class="catalog_img" alt="for women">
+                <div class="catalog__content">
+                    <h3 class="catalog__header">30% OFF</h3>
+                    <p class="catalog__text">FOR WOMEN</p>
+                </div>
+            </div>
+            <div class="catalog__item catalog__item_margin">
+                <img src="img/for_men.png" class="catalog_img" alt="for men">
+                <div class="catalog__content">
+                    <h3 class="catalog__header">HOT DEAL</h3>
+                    <p class="catalog__text">FOR MEN</p>
+                </div>
+            </div>
+            <div class="catalog__item">
+                <img src="img/for_kids.png" class="catalog_img" alt="for kids">
+                <div class="catalog__content">
+                    <h3 class="catalog__header">NEW ARRIVALS</h3>
+                    <p class="catalog__text">FOR KIDS</p>
+                </div>
             </div>
         </div>
-        <div class="catalog__item catalog__item_margin">
-            <img src="img/for_men.png" class="catalog_img" alt="for men">
-            <div class="catalog__content">
-                <h3 class="catalog__header">HOT DEAL</h3>
-                <p class="catalog__text">FOR MEN</p>
+        <div class="catalog__bottom center">
+            <div class="catalog__item">
+                <img src="img/accesories.png" class="catalog_img" alt="accesories">
+                <div class="catalog__content">
+                    <h3 class="catalog__header">LUXIROUS & TRENDY</h3>
+                    <p class="catalog__text">ACCESORIES</p>
+                </div>
             </div>
         </div>
-        <div class="catalog__item">
-            <img src="img/for_kids.png" class="catalog_img" alt="for kids">
-            <div class="catalog__content">
-                <h3 class="catalog__header">NEW ARRIVALS</h3>
-                <p class="catalog__text">FOR KIDS</p>
-            </div>
-        </div>
-    </div>
-    <div class="catalog__bottom center">
-        <div class="catalog__item">
-            <img src="img/accesories.png" class="catalog_img" alt="accesories">
-            <div class="catalog__content">
-                <h3 class="catalog__header">LUXIROUS & TRENDY</h3>
-                <p class="catalog__text">ACCESORIES</p>
-            </div>
-        </div>
-    </div>
-    <div class="product center">
+    </section>
+    <section class="product center">
         <div class="product__header">
             <h3 class="product__header__header">Fetured Items</h3>
             <p class="product__text">Shop for items based on what we featured in this week</p>
         </div>
         <div class="product__catalog">
-            <div class="product__card product__card-1">
-                <img src="img/product_img1.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+            <div class="product__card">
+                <a href="#">
+                    <img src="img/product_img1.png" class="product__img" alt="product">
+                    <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                </a>
+                <a href="#" class="product__button_hover">
+                    <img src="img/trolley-hover.svg" alt="cart">
+                    Add to Cart
+                </a>
                 <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="product__card__price">$52.00</p>
             </div>
-            <div class="product__card product__card-2">
-                <img src="img/product_img2.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+            <div class="product__card">
+                <a href="#">
+                    <img src="img/product_img2.png" class="product__img" alt="product">
+                    <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                </a>
+                <a href="#" class="product__button_hover">
+                    <img src="img/trolley-hover.svg" alt="cart">
+                    Add to Cart
+                </a>
                 <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="product__card__price">$52.00</p>
             </div>
-            <div class="product__card product__card-3">
-                <img src="img/product_img3.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+            <div class="product__card">
+                <a href="#">
+                    <img src="img/product_img3.png" class="product__img" alt="product">
+                    <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                </a>
+                <a href="#" class="product__button_hover">
+                    <img src="img/trolley-hover.svg" alt="cart">
+                    Add to Cart
+                </a>
                 <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="product__card__price">$52.00</p>
             </div>
-            <div class="product__card product__card-4">
-                <img src="img/product_img4.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+            <div class="product__card">
+                <a href="#">
+                    <img src="img/product_img4.png" class="product__img" alt="product">
+                    <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                </a>
+                <a href="#" class="product__button_hover">
+                    <img src="img/trolley-hover.svg" alt="cart">
+                    Add to Cart
+                </a>
                 <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="product__card__price">$52.00</p>
             </div>
-            <div class="product__card product__card-5">
-                <img src="img/product_img5.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+            <div class="product__card">
+                <a href="#">
+                    <img src="img/product_img5.png" class="product__img" alt="product">
+                    <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                </a>
+                <a href="#" class="product__button_hover">
+                    <img src="img/trolley-hover.svg" alt="cart">
+                    Add to Cart
+                </a>
                 <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="product__card__price">$52.00</p>
             </div>
-            <div class="product__card product__card-6">
-                <img src="img/product_img6.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+            <div class="product__card">
+                <a href="#">
+                    <img src="img/product_img6.png" class="product__img" alt="product">
+                    <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                </a>
+                <a href="#" class="product__button_hover">
+                    <img src="img/trolley-hover.svg" alt="cart">
+                    Add to Cart
+                </a>
                 <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                 <p class="product__card__price">$52.00</p>
             </div>
@@ -107,8 +145,8 @@
         <div class="product__button">
             <button class="product__button__button">Browse All Product</button>
         </div>
-    </div>
-    <div class="footer">
+    </section>
+    <footer>
         <div class="footer__top">
             <div class="footer__top__container center">
                 <div class="footer__top__item">
@@ -129,10 +167,12 @@
             </div>
         </div>
         <div class="footer__subscribe center">
-            <div class="footer__subscribe__info">
+            <figure class="footer__subscribe__info">
                 <img src="img/subscribe_img.png" alt="subscribe" class="footer__subscribe__img">
-                <p class="footer__subscribe__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-            </div>
+                <figcaption class="footer__subscribe__text">
+                    “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“
+                </figcaption>
+            </figure>
             <div class="footer__subscribe__form">
                 <h3 class="footer__subscribe__form__header">SUBSCRIBE</h3>
                 <p class="footer__subscribe__form__text">FOR OUR NEWLETTER AND PROMOTION</p>
@@ -145,14 +185,30 @@
         <div class="footer__bottom">
             <div class="footer__bottom__container center">
                 <div class="footer__copyright">© 2021  Brand  All Rights Reserved.</div>
-                <div class="footer__social">
-                    <img src="img/facebook_img.svg" alt="facebook">
-                    <img src="img/instagram_img.svg" alt="instagram">
-                    <img src="img/pinterest_img.svg" alt="pinterest">
-                    <img src="img/twitter_img.svg" alt="twitter">
+                <div class="footer__social">                    
+                    <a href="#">
+                        <div class="footer__icon">
+                            <img src="img/facebook_img.svg" class="footer__icon_hover" alt="">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="footer__icon footer__icon__instagram">
+                            <img src="img/instagram_img.svg" class="footer__icon_hover instagram_invert" alt="instagram">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="footer__icon">
+                            <img src="img/pinterest_img.svg" class="footer__icon_hover" alt="pinterest">
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="footer__icon">
+                            <img src="img/twitter_img.svg" class="footer__icon_hover" alt="twitter">
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
