rabota nad catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
     <header class="top-header center">
         <div class="top-header__left">
-            <a href="#"><img src="img/logo.svg" alt="logo"></a>
+            <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
         </div>
         <div class="top-header__right">
@@ -20,12 +20,12 @@
     </header>
     <section class="main-catalog__header__container">
         <div class="main-catalog__header center">
-            <h2 class="main-catalog__header__hheader">NEW ARRIVALS</h2>
+            <h2 class="main-catalog__header__header">NEW ARRIVALS</h2>
             <nav>
                 <ul class="main-catalog__breadcrumbs">
-                    <li class="breadcrumbs__item"><a href="#">HOME</a></li>
-                    <li class="breadcrumbs__item"><a href="#">MEN</a></li>
-                    <li class="breadcrumbs__item"><a href="#">NEW ARRIVALS</a></li>
+                    <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__item__ref">HOME</a></li>
+                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item__ref">MEN</a></li>
+                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item__ref">NEW ARRIVALS</a></li>
                 </ul>
             </nav>
         </div>
@@ -68,31 +68,47 @@
         </div>
         <div class="main-catalog__filter__center">
             <div class="filter__center__menu">
-                <input type="checkbox" id="filter">
-                <label for="">
+                <input type="checkbox">
+                <label for="#">
                     TRENDING NOW
-                    <img src="img/filter_img2.svg" alt="toggle">
+                    <img src="img/filter_img2.svg" class="filter_img2_mg" alt="toggle">
                 </label>
                 <nav class="filter__menu__navbar"></nav>
             </div>            
             <div class="filter__center__menu">
-                <input type="checkbox" id="filter2" class="filter__menu__input">
+                <input type="checkbox" id="filter2" class="filter__center__input">
                 <label for="filter2">
                     SIZE 
-                    <img src="img/filter_img2.svg" alt="toggle">
+                    <img src="img/filter_img2.svg" class="filter_img2_mg" alt="toggle">
                 </label>
-                <nav class="filter__menu__navbar">
-                    <label><input type="checkbox" class="checkbox_visible">XS</label>
-                    <label><input type="checkbox" class="checkbox_visible">S</label>
-                    <label><input type="checkbox" class="checkbox_visible">M</label>
-                    <label><input type="checkbox" class="checkbox_visible">L</label>
+                <nav class="filter__center__navbar">
+                    <label class="filter__center__add_checkbox">
+                        <input type="checkbox" class="checkbox_visible">
+                        <div class="add_checkbox"></div>
+                        XS
+                    </label>
+                    <label class="filter__center__add_checkbox">
+                        <input type="checkbox" class="checkbox_visible">
+                        <div class="add_checkbox"></div>
+                        S
+                    </label>
+                    <label class="filter__center__add_checkbox">
+                        <input type="checkbox" class="checkbox_visible">
+                        <div class="add_checkbox"></div>
+                        M
+                    </label>
+                    <label class="filter__center__add_checkbox">
+                        <input type="checkbox" class="checkbox_visible">
+                        <div class="add_checkbox"></div>
+                        L
+                    </label>                    
                 </nav>
             </div>            
             <div class="filter__center__menu">
-                <input type="checkbox" id="filter">
-                <label for="">
+                <input type="checkbox">
+                <label>
                     PRICE
-                    <img src="img/filter_img2.svg" alt="toggle">
+                    <img src="img/filter_img2.svg" class="filter_img2_mg" alt="toggle">
                 </label>
                 <nav class="filter__menu__navbar"></nav>
             </div>            
@@ -113,7 +129,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img13.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -125,7 +141,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img3.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -137,7 +153,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img4.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -149,7 +165,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img9.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -161,7 +177,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img10.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -173,7 +189,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img11.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -185,7 +201,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img12.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -197,7 +213,7 @@
         </div>
         <div class="product__card">
             <a href="#">
-                <img src="img/product_img1.png" class="product__img" alt="product">
+                <img src="img/product_img14.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
             <a href="#" class="product__button_hover">
@@ -208,6 +224,19 @@
             <p class="product__card__price">$52.00</p>
         </div>
     </section>
+    <nav class="pagination">
+        <ui>
+            <li><a href="#" class="pagination__item"><img src="" alt="left arrow"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"></a></li>
+            <li><a href="#" class="pagination__item"><img src="" alt="right arrow"></a></li>
+        </ui>
+    </nav>
     <footer>
         <div class="footer__top">
             <div class="footer__top__container center">
