zakonchil catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -225,17 +225,19 @@
         </div>
     </section>
     <nav class="pagination">
-        <ui>
-            <li><a href="#" class="pagination__item"><img src="" alt="left arrow"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"></a></li>
-            <li><a href="#" class="pagination__item"><img src="" alt="right arrow"></a></li>
-        </ui>
+        <div>
+            <ul class="pagination__container">
+                <li><a href="#" class="pagination_item"><img src="img/left_arrow.svg" alt="left arrow"></a></li>
+                <li><a href="#" class="pagination__item">1</a></li>
+                <li><a href="#" class="pagination__item">2</a></li>
+                <li><a href="#" class="pagination__item">3</a></li>
+                <li><a href="#" class="pagination__item">4</a></li>
+                <li><a href="#" class="pagination__item">5</a></li>
+                <li><a href="#" class="pagination__item">6</a></li>
+                <li><a href="#" class="pagination__item pagination__item_notmg">.....20</a></li>
+                <li><a href="#" class="pagination_item"><img src="img/right_arrow.svg" alt="right arrow"></a></li>
+            </ul>
+        </div>
     </nav>
     <footer>
         <div class="footer__top">
