--- a/index.html
+++ b/index.html
@@ -13,7 +13,34 @@
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
         </div>
         <div class="top-header__right">
-            <a href="#"><img src="img/menu.svg" alt="menu"></a>
+            <input type="checkbox" id="main_menu">
+            <label for="main_menu">
+                <img src="img/menu.svg" alt="menu">
+            </label>
+            <nav>
+                <label for="main_menu" class="close_icon">
+                    <img src="img/close_img.svg" alt="cross">
+                </label>
+                <h5 class="main_menu__header">MENU</h5>
+                <p class="main_menu__section">MAN</p>
+                <a href="#" class="main_menu__item">Accessories</a>
+                <a href="#" class="main_menu__item">Bags</a>
+                <a href="#" class="main_menu__item">Denim</a>
+                <a href="#" class="main_menu__item">T-Shirts</a>
+                <p class="main_menu__section">WOMAN</p>
+                <a href="#" class="main_menu__item">Accessories</a>
+                <a href="#" class="main_menu__item">Jackets & Coats</a>
+                <a href="#" class="main_menu__item">Polos</a>
+                <a href="#" class="main_menu__item">T-Shirts</a>
+                <a href="#" class="main_menu__item">Shirts</a>
+                <p class="main_menu__section">KIDS</p>
+                <a href="#" class="main_menu__item">Accessories</a>
+                <a href="#" class="main_menu__item">Jackets & Coats</a>
+                <a href="#" class="main_menu__item">Polos</a>
+                <a href="#" class="main_menu__item">T-Shirts</a>
+                <a href="#" class="main_menu__item">Shirts</a>
+                <a href="#" class="main_menu__item">Bags</a>
+            </nav>
             <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
             <a href="#"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
