dodelal product.html

--- a/catalog.html
+++ b/catalog.html
@@ -307,11 +307,11 @@
         </div>
         <div class="footer__bottom">
             <div class="footer__bottom__container center">
-                <div class="footer__copyright">© 2021 Brand All Rights Reserved.</div>
+                <div class="footer__copyright">&copy; 2021 Brand All Rights Reserved.</div>
                 <div class="footer__social">
                     <a href="#">
                         <div class="footer__icon">
-                            <img src="img/facebook_img.svg" class="footer__icon_hover" alt="">
+                            <img src="img/facebook_img.svg" class="footer__icon_hover" alt="facebook">
                         </div>
                     </a>
                     <a href="#">
