--- a/index.html
+++ b/index.html
@@ -169,9 +169,7 @@
                 <p class="product__card__price">$52.00</p>
             </div>
         </div>
-        <div class="product__button">
-            <button class="product__button__button">Browse All Product</button>
-        </div>
+        <a href="product.html" class="product__button">Browse All Product</a>
     </section>
     <footer>
         <div class="footer__top">
@@ -211,11 +209,11 @@
         </div>
         <div class="footer__bottom">
             <div class="footer__bottom__container center">
-                <div class="footer__copyright">© 2021  Brand  All Rights Reserved.</div>
+                <div class="footer__copyright">&copy; 2021  Brand  All Rights Reserved.</div>
                 <div class="footer__social">                    
                     <a href="#">
                         <div class="footer__icon">
-                            <img src="img/facebook_img.svg" class="footer__icon_hover" alt="">
+                            <img src="img/facebook_img.svg" class="footer__icon_hover" alt="facebook">
                         </div>
                     </a>
                     <a href="#">
