zapustil sass, nachal cart.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Shop</title>
 </head>
 <body>
@@ -209,7 +209,7 @@
         </div>
         <div class="footer__bottom">
             <div class="footer__bottom__container center">
-                <div class="footer__copyright">&copy; 2021  Brand  All Rights Reserved.</div>
+                <div class="footer__copyright">&copy  2021  Brand  All Rights Reserved.</div>
                 <div class="footer__social">                    
                     <a href="#">
                         <div class="footer__icon">
