--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="top-header center">
@@ -198,7 +198,7 @@
         </div>
         <div class="footer__bottom">
             <div class="footer__bottom__container center">
-                <div class="footer__copyright">&copy; 2021 Brand All Rights Reserved.</div>
+                <div class="footer__copyright">&copy  2021 Brand All Rights Reserved.</div>
                 <div class="footer__social">
                     <a href="#">
                         <div class="footer__icon">
