vnedril sass, dobavil mixins.sass variables.sass

--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="top-header center">
+    <header class="top-header">
         <div class="top-header__left">
             <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -47,7 +47,7 @@
     </header>
     <section class="main-catalog__header__container">
         <div class="main-catalog__header center">
-            <h2 class="main-catalog__header__header">NEW ARRIVALS</h2>            
+            <h2 class="main-catalog__header__header">SHOPPING CART</h2>            
         </div>
     </section>
         
