--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="top-header center">
+    <header class="top-header">
         <div class="top-header__left">
             <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -57,7 +57,7 @@
             </nav>
         </div>
     </section>
-    <section class="main-catalog__filter center">
+    <section class="main-catalog__filter">
         <div class="filter__menu">
             <input class="filter__menu__input" type="checkbox" id="filter">
             <label for="filter" class="filter__menu__text">
