--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Shop</title>
+    <title>Home</title>
 </head>
 <body>
-    <header class="top-header center">
+    <header class="top-header">
         <div class="top-header__left">
             <a href="#"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -57,7 +57,7 @@
         </div>
     </main>
     <section>
-        <div class="catalog__top center">
+        <div class="catalog">
             <div class="catalog__item">
                 <img src="img/for_women.png" class="catalog_img" alt="for women">
                 <div class="catalog__content">
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="catalog__bottom center">
+        <div class="catalog__bottom">
             <div class="catalog__item">
                 <img src="img/accesories.png" class="catalog_img" alt="accesories">
                 <div class="catalog__content">
@@ -90,7 +90,7 @@
             </div>
         </div>
     </section>
-    <section class="product center">
+    <section class="product">
         <div class="product__header">
             <h3 class="product__header__header">Fetured Items</h3>
             <p class="product__text">Shop for items based on what we featured in this week</p>
