--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="top-header center">
+    <header class="top-header">
         <div class="top-header__left">
             <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -66,7 +66,7 @@
             <a href="#"><img src="img/slider_arrow_right.svg" class="slider_arrows slider_arrow_right_filter" alt="arrow"></a> 
         </div> 
     </section>
-    <section class="product_description center">
+    <section class="product_description">
         <div class="product_description__container">
             <div class="product_description_position">
                 <div class="product_description_top">
@@ -77,14 +77,14 @@
                     <p class="product_description__price">$561</p>
                 </div>
                 <div class="product_description__chooser">
-                    <div class="chooser__item">
+                    <div class="product_description__chooser__item">
                         CHOOSE COLOR
-                        <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
+                        <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
                     </div>
-                    <div class="chooser__item">
+                    <div class="product_description__chooser__item">
                         CHOOSE SIZE
-                        <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
-                        <nav class="choose__navbar">
+                        <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
+                        <nav class="product_description__chooser__navbar">
                             <label class="filter__center__add_checkbox">
                                 <input type="checkbox" class="checkbox_visible">
                                 <div class="add_checkbox"></div>
@@ -107,9 +107,9 @@
                             </label>                    
                         </nav>
                     </div>
-                    <div class="chooser__item">
+                    <div class="product_description__chooser__item">
                         QUANTITY
-                        <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
+                        <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
                     </div>
                 </div>
                 <a href="#" class="product_description__button">
